# Chat

./: CMakeLists.txt  autobuild.sh
include/: public.h
include/server/: chatserver.h  chatservice.h
include/server/db/: mysqldb.h
include/server/model/: friendmodel.h  group.hpp  groupmodel.h  groupuser.hpp  offlinemessagemodel.h  user.hpp  usermodel.h
include/server/redis/: redis.h
src/client/: main.cc
src/server/: CMakeLists.txt  chatserivce.cc  chatserver.cc  main.cc
src/server/db/: mysqldb.cc
src/server/model/: friendmodel.cc  groupmodel.cc  offlinemessagemodel.cc  usermodel.cc
src/server/redis/: redis.cc
testjson/: testjson  testjson.cc
